tests/baselines/reference/privateAccessInSubclass1.errors.txt
tests/cases/compiler/privateAccessInSubclass1.ts(7,10): error TS2341: Property 'options' is private and only accessible within class 'Base'.


==== tests/cases/compiler/privateAccessInSubclass1.ts (1 errors) ====
    class Base {
      private options: any;
    }
    
    class D extends Base {
      myMethod() {
        this.options;
             ~~~~~~~
!!! error TS2341: Property 'options' is private and only accessible within class 'Base'.
      }
    }